2010-04-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvitype.test: Use installed cm fonts.

2010-04-28  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Require that 'int' has at least 4 bytes,
	allowing to reduce the use of 'integer' in C and C++ code.

2010-04-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.h: remove TEXDLL.
	* config.h: still there is TEXDLL for safety.

2010-04-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (INCLUDES): Remove '-I$(top_builddir)/..' and
	'-I$(top_srcdir)/..'.

2010-04-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pltotf.ch, vptovf.ch: Bug fix, from ptexdir/ppltotf.ch by
	Ken Nakano <nakano@nextsolution.co.jp>.

2010-04-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* bibtex.ch: Fix a small bug (duplicate entry) in bibtex.web.
	(add_out_pool): Call buffer_overflow as often as needed.	

2010-04-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmem.h, texmfmp-help.h: Remove luaTeX specific code.

2010-04-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (sub_dirs): Removed, former ptexdir/lib/ is now
	integrated into lib/.
	* configure.ac (ptexdir/lib/Makefile.am): Removed.

2010-04-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* help.h (PBIBTEXHELP, PDVITYPEHELP, PPLTOTFHELP, PTFTOPLHELP):
	Moved from from ptexdir/ptexhelp.h.
	* texmfmp-help.h (PTEXHELP): Moved from ptexdir/ptexextra.in.
	* texmfmp.h [PTEX]: Define TEXMFPOOLNAME and TEXMFENGINENAME, and
	#include "ptexdir/kanji.h".

2010-04-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Removed LT_LIB_DLLOAD, added check for dlfcn.h.
	May require '-ldl' for dlopen() for luaTeX only (not everyone).

2010-04-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am (sub_dirs): New variable, such that ptexdir/lib/
	for the pTeX programs is (re-)built early.

2010-04-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* triptrap-sh [pTeX]: Generate ptrip.diffs.

2010-04-11  Karl Berry  <karl@tug.org>
