@@ -18,16 +18,6 @@ along with this program; if not, see <http://www.gnu.org/licenses/.  */
 #ifndef WEB2C_CONFIG_H
 #define WEB2C_CONFIG_H
 
-#if defined (TEX_DLL) && (defined (WIN32) || defined (__CYGWIN__))
-#ifdef MAKE_TEX_DLL
-#define TEXDLL __declspec (dllexport)
-#else /* ! MAKE_TEX_DLL */
-#define TEXDLL __declspec (dllimport)
-#endif
-#else /* ! (TEX_DLL && (WIN32 || __CYGWIN__)) */
-#define TEXDLL
-#endif
-
 /* The stuff from the path searching library.  */
 #include <kpathsea/config.h>
 #include <c-auto.h>
