@@ -1,3 +1,7 @@
+2010-05-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
+
+	* config.h: remove TEXDLL.
+
 2010-04-30  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* dvitype.test: Use installed cm fonts.
